@@ -1,5 +1,5 @@
 
-AC_INIT([SSDEEP],[2.2-pre001],[research@jessekornblum.com])
+AC_INIT([SSDEEP],[2.2-pre002],[research@jessekornblum.com])
 AM_INIT_AUTOMAKE
 
 AC_CONFIG_FILES([Makefile])
@@ -12,6 +12,8 @@ AC_LIBTOOL_WIN32_DLL
 #AC_PROG_LIBTOOL
 AM_PROG_LIBTOOL
 AC_PROG_INSTALL
+
+AC_CONFIG_MACRO_DIR([m4])
 
 case $host in
   *-*-*linux*-*) AC_DEFINE([__LINUX__],1,[Linux operating system functions]) ;;
